## Process this file with automake to produce Makefile.in

## Override automake so that "make install" puts these in proper place:
pkgdatadir = $(datadir)/@PACKAGE@/stdsounds

pkgdata_DATA =          \
	MgBar2.ogg	\
	MgHeavy.ogg	\
	Mortar.ogg	\
	SmlExpl.ogg	\
	Splash.ogg	\
	THover.ogg	\
	Tread.ogg	\
	LrgCan.ogg	\
	LrgExpl.ogg	\
	MedCan.ogg	\
	MgBar1.ogg	\
	woodbrk.ogg	\
	wall01.ogg	\
	metbrk.ogg	\
	inh2o.ogg	\
	foot3.ogg

EXTRA_DIST = $(pkgdata_DATA)
